# RAG-system

./: README.md  pyproject.toml
data/: output.txt  output_ocr.csv
notebooks/: rag.ipynb
notebooks/qdrant_data/: meta.json
notebooks/qdrant_data/collection/rag/: storage.sqlite
tests/: tests.csv
